Fix for horizontal scrolling on body and html elements on mobile

--- a/structure.css
+++ b/structure.css
@@ -1,30 +1,5 @@
 
-	/*
-		Structure v 1.1.3 - April 2019
-		
-		• Added outline none to CSS reset
-		• Added new flexbox to wrapper.center class
-	*/
-	
-	/* 
-		Structure v 1.1.2 - February 2019
-		
-		• Added !important to the hide classes
-		• Changed tablet breakpoint to 1023
-		• Adjusted center class on wrapper and wide
-	*/
-	
-	/* 
-		Structure v 1.1.1 - January 2019
-		
-		• Added a min height to the columns
-	*/
-		
-	/* 
-		Structure v 1.1.0 - January 2019
-		
-		• Upgrade from Structure 1.0
-	*/
+	/* Structure v 1.1.4 - structure.davidclarke.me */
 	
 	/* Browser Resets */
 
@@ -47,11 +22,12 @@
 	box-sizing: inherit;
 }
 
-	body 
+	body, html 
 {
 	min-height: 100%;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 	address, caption, cite, code,
